@@ -678,11 +678,13 @@ int OBJ_sn2nid(const char *s)
 const void *OBJ_bsearch_(const void *key, const void *base, int num, int size,
 			 int (*cmp)(const void *, const void *))
 	{
-	return OBJ_bsearch_ex(key, base, num, size, cmp, 0);
+	return OBJ_bsearch_ex_(key, base, num, size, cmp, 0);
 	}
 
-const void *OBJ_bsearch_ex(const void *key, const void *base_, int num,
-	int size, int (*cmp)(const void *, const void *), int flags)
+const void *OBJ_bsearch_ex_(const void *key, const void *base_, int num,
+			    int size,
+			    int (*cmp)(const void *, const void *),
+			    int flags)
 	{
 	const char *base=base_;
 	int l,h,i=0,c=0;
