@@ -70,7 +70,7 @@ typedef struct stack_st
 	int sorted;
 
 	int num_alloc;
-	int (*comp)(const void * const *, const void * const *);
+	int (*comp)(const void *, const void *);
 	} _STACK;  /* Use STACK_OF(...) instead */
 
 #define M_sk_num(sk)		((sk) ? (sk)->num:-1)
@@ -81,7 +81,7 @@ void *sk_value(const _STACK *, int);
 
 void *sk_set(_STACK *, int, void *);
 
-_STACK *sk_new(int (*cmp)(const void * const *, const void * const *));
+_STACK *sk_new(int (*cmp)(const void *, const void *));
 _STACK *sk_new_null(void);
 void sk_free(_STACK *);
 void sk_pop_free(_STACK *st, void (*func)(void *));
@@ -95,9 +95,8 @@ int sk_unshift(_STACK *st, void *data);
 void *sk_shift(_STACK *st);
 void *sk_pop(_STACK *st);
 void sk_zero(_STACK *st);
-int (*sk_set_cmp_func(_STACK *sk, int (*c)(const void * const *,
-					   const void * const *)))
-	(const void * const *, const void * const *);
+int (*sk_set_cmp_func(_STACK *sk, int (*c)(const void *, const void *)))
+	(const void *, const void *);
 _STACK *sk_dup(_STACK *st);
 void sk_sort(_STACK *st);
 int sk_is_sorted(const _STACK *st);
