@@ -4,10 +4,14 @@
 
  Changes between 0.9.8j and 0.9.9  [xx XXX xxxx]
 
+  *) Type-checked OBJ_bsearch_ex.
+     [Ben Laurie]
+
   *) Type-checked OBJ_bsearch. Also some constification necessitated
      by type-checking.  Still to come: TXT_DB, bsearch(?),
      OBJ_bsearch_ex, qsort, CRYPTO_EX_DATA, ASN1_VALUE, ASN1_STRING,
-     CONF_VALUE.  [Ben Laurie]
+     CONF_VALUE.
+     [Ben Laurie]
 
   *) New function OPENSSL_gmtime_adj() to add a specific number of days and
      seconds to a tm structure directly, instead of going through OS
